--- a/index.html
+++ b/index.html
@@ -1,1 +1,154 @@
- 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Iberia Industry Capital Group</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+</head>
+<body>
+    <header class="header">
+        <a href="index.html">
+            <img src="img/logo-duo.svg" alt="company logo" class="header__logo" loading="lazy">  
+        </a>
+        <nav class="header__nav header__nav--desktop">
+            <ul class="header__nav-ul header__nav-ul--desktop">
+                <li class="header__nav-li header__nav-li--desktop"><a href="index.html" class="header__nav-link">HOME</a><div class="header__nav-underline"></div></li>
+                <li class="header__nav-li header__nav-li--desktop"><a href="about.html" class="header__nav-link">ABOUT US</a><div class="header__nav-underline"></div></li>
+                <li class="header__nav-li header__nav-li--desktop"><a href="investment.html" class="header__nav-link">INVESTMENT FOCUS</a><div class="header__nav-underline"></div></li>
+                <li class="header__nav-li header__nav-li--desktop"><a href="team.html" class="header__nav-link">MANAGEMENT TEAM</a><div class="header__nav-underline"></div></li>
+                <li class="header__nav-li header__nav-li--desktop"><a href="contact.html" class="header__nav-link">CONTACT</a><div class="header__nav-underline"></div></li>
+            </ul>
+        </nav>
+        <nav class="header__nav header__nav--mobile">
+            <i class="bi bi-list header__hamburguer-icon"></i>
+            <ul class="header__nav-ul header__nav-ul--mobile">
+                <i class="bi bi-x-lg header__x-icon"></i>
+                <li class="header__nav-li header__nav-li--mobile"><a href="index.html" class="header__nav-link">HOME</a></li>
+                <li class="header__nav-li header__nav-li--mobile"><a href="about.html" class="header__nav-link">ABOUT US</a></li>
+                <li class="header__nav-li header__nav-li--mobile"><a href="investment.html" class="header__nav-link">INVESTMENT FOCUS</a></li>
+                <li class="header__nav-li header__nav-li--mobile"><a href="team.html" class="header__nav-link">MANAGEMENT TEAM</a></li>
+                <li class="header__nav-li header__nav-li--mobile"><a href="contact.html" class="header__nav-link">CONTACT</a></li>
+            </ul>
+        </nav>
+        <div class="lang-selector">
+            <ul class="lang-selector__list">  
+                <li class="lang-selector__lang">EN <i class="bi bi-chevron-down lang-selector__arrow"></i></li>            
+                <li class="lang-selector__lang lang-selector__lang--unselected">DE</li>
+                <li class="lang-selector__lang lang-selector__lang--unselected">ES</li>
+            </ul>
+        </div>
+    </header>
+
+    <div class="hero">
+        <img src="img/icon-white.svg" alt="company icon" class="hero__logo">
+        <div class="hero__bars"></div>
+        <div class="hero__text-container">
+            <div class="hero__text">
+                <p class="hero__p">We acquire manufacturers and service</p>
+                <p class="hero__p">providers in special situations and transform them into</p>
+                <p class="hero__p hero__p--orange">long-term sector leaders</p>
+                <div class="hero__underline"></div>
+            </div>    
+        </div>
+    </div>
+
+    <main>
+
+        <section class="section">
+            <div class="section__text">
+                <div class="section__text-wrapper">
+                    <h2 class="section__title">About us</h2>
+                    <p class="section__p">Iberia Industry Capital Group (IIC) is an experienced industrial holding firm focused on acquiring businesses in special situations, such as distressed companies, corporate divestitures and complex carve outs.</p>
+                </div>
+                <div class="btn1" role="button">
+                    <p class="btn1__text">Learn more about us</p>
+                    <a href="about.html" class="btn1__link">
+                        <div class="btn1__icon">
+                            <i class="bi bi-arrow-right btn1__i"></i>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="section__img section__img--about">
+                <div class="section__img-overlay"></div>
+            </div>
+        </section>
+
+        <section class="section">
+            <div class="section__text section__text--right">
+                <div class="section__text-wrapper">
+                    <h2 class="section__title">Investment focus</h2>
+                    <p class="section__p">Our investment strategy is focused on businesses in special situations, such as strategic refocus of the seller, insufficient earnings or a lack of successors.</p>
+                </div>
+                <div class="btn1" role="button">
+                    <p class="btn1__text">Check our investment criteria</p>
+                    <a href="investment.html" class="btn1__link">
+                        <div class="btn1__icon">
+                            <i class="bi bi-arrow-right btn1__i"></i>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="section__img section__img--investment">
+                <div class="section__img-overlay"></div>
+            </div>
+        </section>
+
+        <section class="section">
+            <div class="section__text">
+                <div class="section__text-wrapper">
+                    <h2 class="section__title">Management Team</h2>
+                    <p class="section__p">The Iberia Industry Capital Group is led by a team of international M&A, turnaround and restructuring experts.</p>
+                </div>
+                <div class="btn1" role="button">
+                    <p class="btn1__text">Meet the managers</p>
+                    <a href="" class="btn1__link">
+                        <div class="btn1__icon">
+                            <i class="bi bi-arrow-right btn1__i"></i>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="section__img section__img--team">
+                <div class="section__img-overlay"></div>
+            </div>
+        </section>
+
+        <section class="cta">
+            <div class="cta__text">
+                <p class="cta__p">Do you have an opportunity that meets our <a href="investment.html" class="cta__link">investment criteria</a>?</p>
+                <a class="btn2">Contact us</a>
+                
+                
+            </div>
+        </section>
+    </main>
+
+    <footer class="footer">
+        <img src="img/logo-white.svg" alt="" class="footer__logo">
+        <nav class="footer__nav footer__nav--main">
+            <ul class="footer__nav-ul">
+                <li class="footer__nav-li"><a href="index.html" class="footer__link">HOME</a></li>
+                <li class="footer__nav-li"><a href="about.html" class="footer__link">ABOUT US</a></li>
+                <li class="footer__nav-li"><a href="investment.html" class="footer__link">INVESTMENT FOCUS</a></li>
+                <li class="footer__nav-li"><a href="team.html" class="footer__link">MANAGEMENT TEAM</a></li>
+                <li class="footer__nav-li"><a href="contact.html" class="footer__link">CONTACT</a></li>
+            </ul>
+        </nav>
+        <nav class="footer__nav footer__nav--secondary">
+            <ul class="footer__nav-ul">
+                <li class="footer__nav-li"><a href="" class="footer__link">Imprint</a></li>
+                <li class="footer__nav-li"><a href="" class="footer__link">Terms of use</a></li>
+                <li class="footer__nav-li"><a href="" class="footer__link">Privacy Policy</a></li>
+                <li class="footer__nav-li"><a href="" class="footer__link">Jobs at IIC</a></li>
+                <li class="footer__nav-li hidden"><a href="" class="footer__link"></a>Ignore Link</li>
+            </ul>
+        </nav>
+    </footer>
+    <script src="js/scripts.js"></script>
+</body>
+</html>
